[package]
name = "dgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
artem = "0.1.0"
clap = { version = "4.5.1", features = ["derive"] }
dotenv = "0.15.0"
reqwest = { version = "0.11.10", features = ['json'] }
serde = "1.0.130"
serde_json = "1.0.72"
tokio = { version = "1.15.0", features = ["full"] }
