[package]
name = "tnap"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
artem = "2.0.6"
clap = { version = "4.5.1", features = ["derive"] }
crossterm = "0.27.0"
dotenv = "0.15.0"
image = "0.24.8"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
toml = "0.8.10"
ratatui = "0.26.1"
ansi-to-tui = "4.0.0"
ratatui-image = "0.8.1"
log = "0.4.20"
env_logger = "0.11.2"
once_cell = "1.19.0"
chrono = "0.4.34"
